standardized the plain string ResponseEntity bodies to return a readable object